day 2 lunch - form

--- a/app/templates/components/layout.html
+++ b/app/templates/components/layout.html
@@ -26,7 +26,7 @@
                   <a class="nav-link" href="{{ url_for('movies.actoroftheday') }}">Actor of the Day</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Products</a>
+                  <a class="nav-link" href="{{ url_for('movies.addactor') }}">Add Actor</a>
                 </li>
               </ul>
             </div>
